@@ -58,3 +58,4 @@
  Note    : (1)update Makefile to v0.2.6
            (2)refactor hml/version.h
            (3)optimize compile select
+           (4)add function UART_getByte and UART_sendHex
